# mega-school

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml  pytest-report.junit.xml  start-dev.sh  start.sh
src/: application_logger.py  config.py  dependency_injector.py  fast_api_app.py  main-dev.py  main.py  uvicorn_server.py
src/agent/: base_agent.py  gigachat_agent.py  openai_agent.py
src/dto/: request.py
src/routers/: base_router.py  itmo_router.py
src/search_engine/: base_search_engine.py  google_search_engine.py
src/service/: base_service.py  itmo_service.py
test_integration/: conftest.py  test_request.py
